k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k-guard-green
  labels:
    name: k-guard-green
    environment: development
