k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-guard-backend-service
  namespace: k-guard
spec:
  type: NodePort
  selector:
    app: k-guard
  ports:
    - name: back
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30002

---

apiVersion: v1
kind: Service
metadata:
  name: k-guard-frontend-service
  namespace: k-guard
spec:
  type: NodePort
  selector:
    app: k-guard
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
