k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-guard-service-green
  namespace: k-guard-green
spec:
  selector:
    app: k-guard-green
  ports:
    - name: api
      port: 8000
      targetPort: 8000
