k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k-guard-allow-traefik
  namespace: k-guard
spec:
  podSelector:
    matchLabels:
      app: k-guard
  policyTypes:
  - Ingress
  ingress:
    # On autorise le flux provenant de Traefik (kube-system)
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
      ports:
      - protocol: TCP
        port: 8000 # Backend
      - protocol: TCP
        port: 80   # Frontend
